--- a/global.css
+++ b/global.css
@@ -2,3 +2,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.bg-gradient {
+    background: linear-gradient(0deg, rgba(185, 255, 152, 0.30) 0%, rgba(185, 255, 152, 0.30) 100%), #FFF
+}
+.boxShadow {
+    box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
+}
